<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="186dp" />

        <TextView
            android:id="@+id/LogInTitle"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:gravity="center"
            android:text="@string/Log_In"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawableLeft="@drawable/baseline_person_2_24"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="29dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="text" />

        <Button
            android:id="@+id/btn_LogInConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Log_In" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <TextView
            android:id="@+id/NoAccountPrompt"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:gravity="center"
            android:text="@string/No_Account" />

        <Button
            android:id="@+id/btn_SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="OnSignUp"
            android:text="@string/Sign_Up" />
    </LinearLayout>

</RelativeLayout>