<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewReadingRequirementsInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Reading_Requirements_Instructions"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30sp" />

        <TextView
            android:id="@+id/requirements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextEventDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Create_Event_Details"
            android:inputType="text" />

        <TextView
            android:id="@+id/textViewEventDetailsIntructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Event_Details_Instructions"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCreateEventDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Save" />

            <Button
                android:id="@+id/buttonReturnEventDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Return" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>