<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/accountTypeCreation"
            android:layout_width="184dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:entries="@array/Account_Type_Creation" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="120dp" />

        <TextView
            android:id="@+id/SignUpTitle"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:gravity="center"
            android:text="@string/Sign_Up"
            android:textSize="20sp"
            android:textStyle="bold"/>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailCreation"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawableLeft="@drawable/baseline_person_2_24"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/username_Creation_hint"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="29dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordCreation"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/password_Creation_hint"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="29dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameCreation"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawableLeft="@drawable/baseline_person_outline_24"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="Display Name/Club Name"
            android:inputType="text" />

        <Button
            android:id="@+id/btn_SignUpConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Sign_Up" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:onClick="logout" />

        <TextView
            android:id="@+id/HaveAccountPrompt"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:gravity="center"
            android:text="@string/Have_Account" />

        <Button
            android:id="@+id/btn_LogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="OnLogIn"
            android:text="@string/Log_In" />
    </LinearLayout>
</RelativeLayout>